# Mlops

./: .gitignore  Makefile  README.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
dags/: predictions_dag.py  retrain_dag.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.train
docs/: DEPLOY.md  revision_mlops.md
frontend/: app.py
scripts/: get_dataset.sh  make_report.py  make_sample_data.py  predict.py  preview_data.py
src/mlproject/: api.py  config.py  data.py  evaluation.py  features.py  tracking.py  train.py  train_models.py  train_optuna.py
tests/: test_api.py  test_pipeline.py
