[project]
name = "mlproject"
version = "0.1.0"
description = "Projet fil rouge MLOps : pipeline de classification binaire (ESGI IABD)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Donnees / ML
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    # Modeles a base d'arbres
    "xgboost>=2.1",
    "lightgbm>=4.5",
    # Suivi d'experiences / optimisation / explicabilite
    "mlflow>=2.16",
    "optuna>=4.0",
    "shap>=0.46",
    # numba/llvmlite : versions compatibles Python 3.13 (dependances de shap)
    "numba>=0.61",
    "llvmlite>=0.44",
    "matplotlib>=3.9",
    # API d'inference
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    # Frontend de test
    "streamlit>=1.39",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Le code source vit dans src/mlproject ; on l'expose en tant que package `mlproject`.
packages = ["src/mlproject"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
